syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.usatiuk.dhfs.persistence";
option java_outer_classname = "DhfsObjectPersistence";

package dhfs.persistence;

message JObjectKeyP {
  string name = 1;
}

message PeerIdP {
  JObjectKeyP id = 1;
}

message ObjectChangelog {
  message entries_Entry {
    PeerIdP key = 1;
    int64 value = 2;
  }
  repeated entries_Entry entries = 1;
}

message JDataRemoteDtoP {
  bytes serializedData = 1;
}

message JDataP {
  bytes serializedData = 1;
}